// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DialogContent ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogContent-root css-1ivgu2b-MuiDialogContent-root"
  >
    Hey
  </div>
</div>
`;

exports[`DialogContent ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogContent-root css-1ivgu2b-MuiDialogContent-root"
  >
    Hey
  </div>
</div>
`;

exports[`DialogContent ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
  >
    Hey
  </div>
</div>
`;

exports[`DialogContent ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogContent-root css-kw13he-MuiDialogContent-root"
  >
    Hey
  </div>
</div>
`;
